--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
     "lint": "next lint",
     "prepare": "husky install",
     "lint-staged": "lint-staged",
-    "schema:generate-file-windows": "cross-env OS=Windows && type ./prisma/common.schema.prisma ./prisma/project.schema.prisma > ./prisma/schema.prisma",
-    "schema:generate-file-mac": "cat ./prisma/common.schema.prisma > ./prisma/schema.prisma && tail -n +21 ./prisma/project.schema.prisma >> ./prisma/schema.prisma",
-    "schema:generate-file": "npm-run-all schema:generate-file-*",
-    "schema:generate-win": "npm run schema:generate-file-windows && npx prisma generate",
-    "schema:generate": "npm run schema:generate-file-mac && npx prisma generate"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@apollo/server": "^4.9.3",
