--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-modal": "^3.16.1",
     "resend": "^1.1.0",
     "tailwindcss": "3.3.3",
     "twilio": "^4.18.1",
@@ -58,6 +59,7 @@
     "@types/js-cookie": "^3.0.4",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/nodemailer": "^6.4.14",
+    "@types/react-modal": "^3.16.3",
     "@types/validator": "^13.11.2",
     "encoding": "^0.1.13",
     "lint-staged": "^14.0.1",
