OAuth with google and facebook

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.74.0",
     "@types/node": "20.7.1",
     "@types/react": "18.2.23",
