--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "node-mailjet": "^6.0.6",
     "nodemailer": "^6.9.8",
     "npm-run-all": "^4.1.5",
+    "openai": "^6.9.1",
     "postcss": "8.4.31",
     "prettier": "^3.0.3",
     "react": "18.2.0",
