--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.74.0",
     "@types/node": "20.7.1",
@@ -59,6 +60,7 @@
     "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "resend": "^1.1.0",
+    "stripe": "^20.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
