--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.545.0",
+    "moment": "^2.30.1",
     "next": "13.5.3",
     "next-auth": "^4.24.5",
     "node-mailjet": "^6.0.6",
